password reset emails
- Also closes #4

--- a/server/apply-nginx.conf
+++ b/server/apply-nginx.conf
@@ -15,6 +15,9 @@ server {
   location /login {
   fastcgi_pass localhost:9111;
   }
+  location /reset {
+  fastcgi_pass localhost:9111;
+  }
 
   #error_page  404  /404.html;
 }
