Add the ability to auth via LDAP
Check if the stored password is blank, if it is then check the submitted
password against LDAP instead.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+*.swp
 *.6
 server/main
 server/pkg
@@ -8,3 +10,4 @@ tools/closure-compiler
 tools/closure-library
 sample/smtp-password
 server/src/code.google.com
+server/src/github.com
