moved server/ to src/ and unified the Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 .DS_Store
 *.swp
 *.6
-server/main
-server/pkg
+main
+pkg
 cs-dept
-client/www/apply.min.js
-tools/closure-compiler.zip
-tools/closure-compiler
-tools/closure-library
 sample/smtp-password
-server/src/code.google.com
-server/src/github.com
+src/code.google.com
+src/github.com
+autom4te.cache/
+config.log
